added cast detail page and setup navigation to this page

--- a/MovieProject/en.lproj/Main.strings
+++ b/MovieProject/en.lproj/Main.strings
@@ -1,6 +1,6 @@
 
-/* Class = "UILabel"; text = "Label"; ObjectID = "9N8-gj-Ba1"; */
-"9N8-gj-Ba1.text" = "Label";
+/* Class = "UILabel"; text = "Birthday"; ObjectID = "578-Xa-Mp8"; */
+"578-Xa-Mp8.text" = "Birthday";
 
 /* Class = "UINavigationItem"; title = "Popular Movies"; ObjectID = "9yp-S2-wAv"; */
 "9yp-S2-wAv.title" = "Popular Movies";
@@ -8,8 +8,11 @@
 /* Class = "UIViewController"; title = "Movies"; ObjectID = "BYZ-38-t0r"; */
 "BYZ-38-t0r.title" = "Movies";
 
+/* Class = "UILabel"; text = "Deathday"; ObjectID = "Rub-av-ujo"; */
+"Rub-av-ujo.text" = "Deathday";
+
 /* Class = "UITabBarItem"; title = "Movies"; ObjectID = "afr-od-DBq"; */
 "afr-od-DBq.title" = "Movies";
 
-/* Class = "UIViewController"; title = "DetailedMovie"; ObjectID = "yxM-27-BBj"; */
-"yxM-27-BBj.title" = "DetailedMovie";
+/* Class = "UILabel"; text = "Place of Birth"; ObjectID = "xjv-l2-a8c"; */
+"xjv-l2-a8c.text" = "Place of Birth";
