added search system and pagination support for search system too

--- a/MovieProject/Resources/en.lproj/Localizable.strings
+++ b/MovieProject/Resources/en.lproj/Localizable.strings
@@ -24,4 +24,4 @@
 "ok" = "OK";
 "error" = "Error";
 "addFavErrorMsg" = "An error occurred while adding to favorites.";
-
+"notReleased" = "Not Released";
