fixed customlist's pagination and add feature that creates a list if there isn't any on detail page

--- a/MovieProject/Resources/en.lproj/Localizable.strings
+++ b/MovieProject/Resources/en.lproj/Localizable.strings
@@ -36,3 +36,6 @@
 "editList" = "Edit List";
 "editListMessage" = "Enter a new name for the list";
 "editListPlaceholder" = "List Name";
+"addGenre" = "Add Genre";
+"addGenreMessage" = "Select a genre to add";
+"createNewList" = "New List +";
