ui and localization updates, manager classes refactored

--- a/MovieProject/en.lproj/Main.strings
+++ b/MovieProject/en.lproj/Main.strings
@@ -16,3 +16,9 @@
 
 /* Class = "UILabel"; text = "Place of Birth"; ObjectID = "xjv-l2-a8c"; */
 "xjv-l2-a8c.text" = "Place of Birth";
+
+"MaP-iG-bJZ.text" = "Release Date";
+"weM-Xw-pod.text" = "Rating";
+"BDt-QO-fhK.text" = "Genres";
+"zdy-wQ-Jip.text" = "Sort By";
+"eOd-Ss-ih4.title" = "Add new genre";
