--- a/MovieProject/tr.lproj/Main.strings
+++ b/MovieProject/tr.lproj/Main.strings
@@ -23,4 +23,5 @@
 "weM-Xw-pod.text" = "Puan";
 "BDt-QO-fhK.text" = "Kategori";
 "zdy-wQ-Jip.text" = "Sıralama Türü";
-"eOd-Ss-ih4.title" = "Yeni kategori ekle";
+"eOd-Ss-ih4.configuration.title" = "Yeni kategori ekle";
+"3iZ-7d-4up.configuration.title" = "Keşfet";
