improved discover page's UI, fixed pagination problem on gridview layout

--- a/MovieProject/tr.lproj/Main.strings
+++ b/MovieProject/tr.lproj/Main.strings
@@ -23,5 +23,5 @@
 "weM-Xw-pod.text" = "Puan";
 "BDt-QO-fhK.text" = "Kategori";
 "zdy-wQ-Jip.text" = "Sıralama Türü";
-"eOd-Ss-ih4.configuration.title" = "Yeni kategori ekle";
-"3iZ-7d-4up.configuration.title" = "Keşfet";
+"3iZ-7d-4up.normalTitle" = "Keşfet";
+"M0D-TT-E2Q.text" = "Bilinin İşi";
