--- a/MovieProject/en.lproj/Main.strings
+++ b/MovieProject/en.lproj/Main.strings
@@ -21,5 +21,5 @@
 "weM-Xw-pod.text" = "Rating";
 "BDt-QO-fhK.text" = "Genres";
 "zdy-wQ-Jip.text" = "Sort By";
-"eOd-Ss-ih4.configuration.title" = "Add new genre";
-"3iZ-7d-4up.configuration.title" = "Discover";
+"3iZ-7d-4up.normalTitle" = "Discover";
+"M0D-TT-E2Q.text" = "Known For"
