fixed one localization error

--- a/MovieProject/tr.lproj/Main.strings
+++ b/MovieProject/tr.lproj/Main.strings
@@ -25,3 +25,4 @@
 "zdy-wQ-Jip.text" = "Sıralama Türü";
 "3iZ-7d-4up.normalTitle" = "Keşfet";
 "M0D-TT-E2Q.text" = "Bilinin İşi";
+"fvm-Dl-SzI.text" = "film";
