--- a/MovieProject/en.lproj/Main.strings
+++ b/MovieProject/en.lproj/Main.strings
@@ -23,3 +23,4 @@
 "zdy-wQ-Jip.text" = "Sort By";
 "3iZ-7d-4up.normalTitle" = "Discover";
 "M0D-TT-E2Q.text" = "Known For"
+"fvm-Dl-SzI.text" = "movie";
